axonius-assessment/force-app/main/default/objects/Pet__c/Pet__c.object-meta.xml
<CustomObject>
    <description>Track the pets of each owner.</description>
    <label>Pet</label>
    <nameField>
        <label>Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>