axonius-assessment/force-app/main/default/objects/Pet__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age of pet to the nearest half year.</description>
    <formula>FLOOR(
  (TODAY() - Birthday__c) / 365.25
) +
IF(
  MOD((TODAY() - Birthday__c), 365.25) &gt;= 182.625,
  0.5,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>