axonius-assessment/force-app/main/default/objects/Pet__c/fields/Coat_Length__c.field-meta.xml
<CustomField>
    <fullName>Coat_Length__c</fullName>
    <label>Coat Length</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Species__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bare</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>