axonius-assessment/force-app/main/default/objects/Pet__c/fields/Owner_Is_Missing__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_Missing__c</fullName>
    <description>formula field that returns true if the Pet Owner field is blank.</description>
    <formula>ISBLANK ( Pet_Owner__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is Missing</label>
    <type>Checkbox</type>
</CustomField>