axonius-assessment/force-app/main/default/objects/Pet__c/fields/Pet_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pet_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pet Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Pet Owner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <type>Lookup</type>
</CustomField>