axonius-assessment/force-app/main/default/objects/Pet__c/fields/Pet_Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>Pet_Tag_Line__c</fullName>
    <formula>Name &amp; &quot; | &quot; &amp; TEXT (  Species__c ) &amp; &quot; | Age: &quot; &amp; TEXT ( Age__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pet Tag Line</label>
    <type>Text</type>
</CustomField>