axonius-assessment/force-app/main/default/objects/Pet__c/fields/Primary_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary trainer can be used to expedite scheduling a training session for a pet.</description>
    <label>Primary Trainer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Trainer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pet Friends</relationshipLabel>
    <relationshipName>PrimaryPets</relationshipName>
    <type>Lookup</type>
</CustomField>