axonius-assessment/force-app/main/default/objects/Pet__c/fields/Veterinarian__c.field-meta.xml
<CustomField>
    <fullName>Veterinarian__c</fullName>
    <label>Veterinarian</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>